--- a/src/appsco-billing-report-page.html
+++ b/src/appsco-billing-report-page.html
@@ -403,8 +403,23 @@
                     payment_type: this.paymentType,
                     period: this.period
                 };
-            }
+            },
 
+            getFailMessage: function() {
+                return 'Export of Billing Report failed. Please contact AppsCo support.';
+            },
+
+            getFileName: function() {
+                return 'Billing Report.xlsx';
+            },
+
+            getOnSuccessEvent: function() {
+                return 'export-billing-report-finished';
+            },
+
+            getOnFailEvent: function() {
+                return 'export-billing-report-failed';
+            }
         });
     </script>
 </dom-module>
