--- a/src/appsco-policies-report-page.html
+++ b/src/appsco-policies-report-page.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../bower_components/paper-styles/shadow.html">
 
 <link rel="import" href="components/page/appsco-content.html">
+<link rel="import" href="components/page/appsco-page-styles.html">
 <link rel="import" href="components/report/appsco-policy-report-roles.html">
 <link rel="import" href="components/report/appsco-policy-report-page-filters.html">
 
@@ -16,30 +17,18 @@
 <dom-module id="appsco-policies-report-page">
     <template>
 
-        <style include="shared-styles webkit-scrollbar-style">
+        <style include="appsco-page-styles">
             :host {
-                display: block;
-
-                --resource-width: 318px;
+                --content-background-color: #ffffff;
                 --background-color: var(--body-background-color);
-                --collapsible-content-background-color: #fbfbfb;
+                --policies-report-account-initials-background-color: var(--body-background-color-darker);
             }
             :host div[resource] {
                 height: 100%;
                 overflow: auto;
             }
-            :host div[resource] > .resource-content {
-                padding: 30px 10px 10px;
-            }
-            :host div[content] {
-                min-height: 100%;
-                background-color: #ffffff;
-            }
-            .content-container {
-                padding: 10px;
-            }
-            :host *[hidden] {
-                display: none;
+            :host div[resource] .resource-content {
+                padding-top: 30px;
             }
             appsco-policy-report-roles {
                 --list-container: {
@@ -50,22 +39,6 @@
                 --appsco-list-item: {
                     cursor: default;
                 };
-            }
-            :host .flex-horizontal {
-                @apply(--layout-horizontal);
-                @apply(--layout-center);
-            }
-            :host .flex-vertical {
-                @apply(--layout-vertical);
-            }
-            :host .flex {
-                @apply(--layout-flex);
-            }
-            :host([tablet-screen]) {
-                --resource-width: 250px;
-            }
-            :host([mobile-screen]) {
-                --resource-width: 200px;
             }
         </style>
 
