--- a/src/appsco-access-report-page.html
+++ b/src/appsco-access-report-page.html
@@ -4,11 +4,11 @@
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable-behavior.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animation-runner-behavior.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../bower_components/paper-styles/shadow.html">
 
 <link rel="import" href="components/page/appsco-content.html">
+<link rel="import" href="components/page/appsco-page-styles.html">
 <link rel="import" href="components/report/appsco-access-report-accounts.html">
 <link rel="import" href="components/report/appsco-access-report-page-filters.html">
 
@@ -17,13 +17,10 @@
 <dom-module id="appsco-access-report-page">
     <template>
 
-        <style include="shared-styles webkit-scrollbar-style">
+        <style include="appsco-page-styles">
             :host {
-                display: block;
-
-                --resource-width: 318px;
+                --content-background-color: #ffffff;
                 --background-color: var(--body-background-color);
-                --collapsible-content-background-color: #fbfbfb;
                 --access-report-account-initials-background-color: var(--body-background-color-darker);
                 --appsco-access-report-list-item: {
                     cursor: default;
@@ -32,43 +29,13 @@
                     @apply(--shadow-elevation-2dp);
                 };
             }
-            :host div[resource] {
-                height: 100%;
-                overflow: auto;
-            }
-            :host div[resource] > .resource-content {
-                padding: 30px 10px 10px;
-            }
-            :host div[content] {
-                min-height: 100%;
-                background-color: #ffffff;
-            }
-            .content-container {
-                padding: 10px;
-            }
-            :host *[hidden] {
-                display: none;
+            :host div[resource] .resource-content {
+                padding-top: 30px;
             }
             appsco-access-report-accounts {
                 --list-container: {
                     min-height: 60px;
                 };
-            }
-            :host .flex-horizontal {
-                @apply(--layout-horizontal);
-                @apply(--layout-center);
-            }
-            :host .flex-vertical {
-                @apply(--layout-vertical);
-            }
-            :host .flex {
-                @apply(--layout-flex);
-            }
-            :host([tablet-screen]) {
-                --resource-width: 250px;
-            }
-            :host([mobile-screen]) {
-                --resource-width: 200px;
             }
         </style>
 
@@ -236,7 +203,7 @@
             ],
 
             observers: [
-                '_updateScreen(mobileScreen, tabletScreen, screen992)',
+                '_updateScreen(mobileScreen, tabletScreen)',
                 '_toggleFilters(mobileScreen)'
             ],
 
